# cryptocurrency-forecasting-project

./: .gitignore  BUILD  Makefile  README.md  WORKSPACE  deps.bzl  docker-compose.yml  go.mod  go.sum
bazel/: kafka.patch
collector/: .env.example
collector/cmd/binance_worker/: BUILD.bazel  main.go
collector/cmd/blockchain_worker/: BUILD.bazel  main.go
collector/cmd/coinbase_worker/: BUILD.bazel  main.go
collector/config/: BUILD.bazel  config.go
collector/deployments/: docker-compose.yml
collector/internal/binance_worker/: BUILD.bazel  request.go  response.go  service.go
collector/internal/binance_worker/routes/: BUILD.bazel
collector/internal/blockchain_worker/: BUILD.bazel  request.go
collector/internal/blockchain_worker/routes/: BUILD.bazel
collector/internal/coinbase_worker/: BUILD.bazel  request.go
collector/internal/coinbase_worker/routes/: BUILD.bazel
collector/pkg/database/: BUILD.bazel  database.go
collector/pkg/entities/: BUILD.bazel  binance_candlestick.go  binance_ticker.go
collector/pkg/kafka/: BUILD.bazel  producer.go
collector/pkg/websocket/: BUILD.bazel  websocket.go
collector_ingestor/: .env.example
collector_ingestor/cmd/binance_collector/: BUILD.bazel  main.go
collector_ingestor/cmd/binance_worker/: BUILD.bazel  main.go
collector_ingestor/cmd/coinbase_collector/: BUILD.bazel  main.go
collector_ingestor/cmd/coinbase_worker/: BUILD.bazel  main.go
collector_ingestor/cmd/ingestor/: BUILD.bazel  main.go
collector_ingestor/config/: BUILD.bazel  cdc-binance-candlestick-conf.json  cdc-binance-ticker-conf.json  cdc-coinbase-candle-conf.json  cdc-coinbase-ticker-conf.json  config.go
collector_ingestor/deployment/: docker-compose.yml
collector_ingestor/deployment/binance_collector/: Dockerfile
collector_ingestor/deployment/coinbase_collector/: Dockerfile
collector_ingestor/deployment/ingestor/: Dockerfile
collector_ingestor/internal/binance_collector/: BUILD.bazel  response.go
collector_ingestor/internal/binance_worker/: BUILD.bazel
collector_ingestor/internal/coinbase_collector/: BUILD.bazel  response.go
collector_ingestor/internal/coinbase_worker/: BUILD.bazel  response.go
collector_ingestor/internal/ingestor/: BUILD.bazel  service.go  service_test.go  transform.go  transform_test.go
collector_ingestor/pkg/config/: BUILD.bazel  config_test.go
collector_ingestor/pkg/database/: BUILD.bazel  database.go  database_test.go
collector_ingestor/pkg/entities/: BUILD.bazel  binance_candlestick.go  binance_ticker.go  coinbase_candle.go  coinbase_ticker.go
collector_ingestor/pkg/kafka/: BUILD.bazel  consumer.go  producer.go  schema_registry.go
collector_ingestor/pkg/response/: BUILD.bazel  binance.go  coinbase.go
collector_ingestor/pkg/websocket/: BUILD.bazel  websocket.go  websocket_test.go
ingestor/cmd/: BUILD.bazel
