load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "binance_worker_lib",
    srcs = ["main.go"],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector/cmd/binance_worker",
    visibility = ["//visibility:private"],
    deps = [
        "//collector/config",
        "//collector/internal/binance_worker",
        "//collector/pkg/database",
        "//collector/pkg/entities",
        "//collector/pkg/websocket",
    ],
)

go_binary(
    name = "binance_worker",
    embed = [":binance_worker_lib"],
    visibility = ["//visibility:public"],
)
