load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "coinbase_worker_lib",
    srcs = ["main.go"],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector/cmd/coinbase_worker",
    visibility = ["//visibility:private"],
    deps = [
        "//collector/config",
        "//collector/pkg/database",
        "//collector/pkg/websocket",
    ],
)

go_binary(
    name = "coinbase_worker",
    embed = [":coinbase_worker_lib"],
    visibility = ["//visibility:public"],
)
