load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "binance_worker",
    srcs = [
        "request.go",
        "response.go",
        "service.go",
    ],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector/internal/binance_worker",
    visibility = ["//collector:__subpackages__"],
    deps = [
        "//collector/pkg/database",
        "//collector/pkg/entities",
        "//collector/pkg/websocket",
    ],
)
