load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "kafka",
    srcs = [
        "consumer.go",
        "producer.go",
    ],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector/pkg/kafka",
    visibility = ["//visibility:public"],
    deps = ["@com_github_confluentinc_confluent_kafka_go_v2//kafka"],
)
