load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "binance_collector_lib",
    srcs = ["main.go"],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector_ingestor/cmd/binance_collector",
    visibility = ["//visibility:private"],
    deps = [
        "//collector_ingestor/pkg/config",
        "//collector_ingestor/pkg/kafka",
        "//collector_ingestor/pkg/response",
        "//collector_ingestor/pkg/websocket",
    ],
)

go_binary(
    name = "binance_collector",
    embed = [":binance_collector_lib"],
    visibility = ["//visibility:public"],
)
