load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ingestor_lib",
    srcs = ["main.go"],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector_ingestor/cmd/ingestor",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "ingestor",
    embed = [":ingestor_lib"],
    visibility = ["//visibility:public"],
)
