load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ingestor_lib",
    srcs = ["main.go"],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector_ingestor/cmd/ingestor",
    visibility = ["//visibility:private"],
    deps = [
        "//collector_ingestor/internal/ingestor",
        "//collector_ingestor/pkg/config",
        "//collector_ingestor/pkg/database",
        "//collector_ingestor/pkg/entities",
        "//collector_ingestor/pkg/kafka",
        "@com_github_confluentinc_confluent_kafka_go_v2//kafka",
        "@io_gorm_driver_postgres//:postgres",
    ],
)

go_binary(
    name = "ingestor",
    embed = [":ingestor_lib"],
    visibility = ["//visibility:public"],
)
