load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "binance_worker",
    srcs = ["response.go"],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector_ingestor/internal/binance_worker",
    visibility = ["//collector_ingestor:__subpackages__"],
)
