load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ingestor",
    srcs = [
        "service.go",
        "transform.go",
    ],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector_ingestor/internal/ingestor",
    visibility = ["//collector_ingestor:__subpackages__"],
    deps = [
        "//collector_ingestor/pkg/database",
        "//collector_ingestor/pkg/entities",
        "//collector_ingestor/pkg/kafka",
        "//collector_ingestor/pkg/response",
        "@com_github_confluentinc_confluent_kafka_go_v2//kafka",
    ],
)

go_test(
    name = "ingestor_test",
    srcs = ["transform_test.go"],
    embed = [":ingestor"],
    deps = [
        "//collector_ingestor/pkg/entities",
        "//collector_ingestor/pkg/response",
    ],
)
