load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector_ingestor/pkg/config",
    visibility = ["//visibility:public"],
    deps = ["@com_github_joho_godotenv//:godotenv"],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    embed = [":config"],
    deps = ["@com_github_stretchr_testify//assert"],
)
