load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "entities",
    srcs = [
        "binance_candlestick.go",
        "binance_ticker.go",
        "coinbase_ticker.go",
    ],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector_ingestor/pkg/entities",
    visibility = ["//visibility:public"],
)
