load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "websocket",
    srcs = ["websocket.go"],
    importpath = "github.com/Hnamnguyen0112/cryptocurrency-forecasting-project/collector_ingestor/pkg/websocket",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gorilla_websocket//:websocket"],
)

go_test(
    name = "websocket_test",
    srcs = ["websocket_test.go"],
    embed = [":websocket"],
    deps = [
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)
